wwr/styles/rafting.css
:root {
    --primary-color: #48A9A6;
    --secondary-color: #E4DFDA;
    --accent1-color: #D4B483;
    --accent2-color: #C1666B; 
}

* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

header {
    display: grid;
    grid-template-columns: 1fr 3fr;
    align-items: center;
    padding: 10px;
    margin: 10px;
    background: var(--primary-color);
}

header img {
    width: 150px;
    height: auto;
}

nav {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

nav a {
    font-size: larger;
    text-decoration: none;
    color: black;
}

.hero {
    position: relative;
    margin: 10px;
}

.hero img {
    width: 100%;
    height: auto;
    display: block;
}

.hero h1 {
    font-size: 2rem;
    width: 100%;
    text-align: center;
    background-color: #0000008e;
    color: var(--secondary-color);
    position: absolute;
    top: 10px;
}

.hero article {
    width: 100%;
    padding: clamp(1rem, 3vw, 2rem);
    background-color: #0000008e;
    text-align: center;
    align-items: center;
    bottom: 5rem;
    display: flex;
    color: #E4DFDA;
    margin: 0 1rem;
    position: absolute;
}

.home h1 {
    width: 100%;
    padding: clamp(1rem, 3vw, 2rem);
    background-color: #0000008e;
    text-align: center;
    bottom: 5rem;
    color: var(--secondary-color);
    position: absolute;
}

#happycustomer{
    max-width:100px !important;
    height: auto;
    padding: 10px;
    float: right;
}

.hero article p {
    float: left;
    padding-top: 20px;
    font-size: 1.1rem;
}

.home {
    position: relative;
    margin: 10px;
}

.home img {
    width: 100%;
    height: auto;
    display: block;
}

h1, h2 {
    font-family: 'Henny Penny', Georgia, serif;
    color: black;
    text-align: center;
    padding: 10px;
}

.newsletter {
    background-color:#D4B483;
    margin: 0 0.5em;
}

#call-to-action {
    background-color: var(--accent2-color);
    margin: 0 0.5em;
    text-align: center;
}

#call-to-action h2 {
    padding: 20px;
    text-align: center;
}

#call-to-action div {
    padding: 5rem 0 3rem 0;
}

#call-to-action a {
    text-decoration: none;
    color: black;
    border: solid;
    background-color: #E4DFDA;
    padding: 20px;
    font-size: 1.7rem;
    font-weight: 500;
    border-radius: 15px;
}

.grid-section {
    background-color: var(--accent1-color);
    margin: 0.5em;
}

.grid-section h2 {
    margin: 0 10rem;
    margin-bottom: 20px;
}

section h2 {
    padding: 20px;
}

.grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin: 0;
    overflow-x: hidden;
}

.grid-item {
    padding: 20px;
    text-align: center;
}

.grid-item img {
    width: 100%;
    height: auto;
}

.grid-item p {
    font-size: larger;
}

.trips {
    gap: 20px;
    background-color: #D4B483;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin: 0.5em;
   
}

.trip img {
    width: 100%;
    height: auto;
}

.trip p {
    text-align: center;
    padding: 5px;
    font-size: 1.5rem;
}

.trip {
    margin: 1em;
}

.trip-table-container {
    display: flex;
    margin: 0.5em;
    height: 400px;
    background-color: var(--secondary-color);
}

.trip-table {
    border: 1px solid;
    margin: 2rem auto;
    width: 90%;
}

thead th {
    background-color: var(--accent2-color);
    font-size: 1.3rem;
}

th, td {
    text-align: center;
    border: 1px solid;
    padding: 10px;

}

#history {
    margin: 0 0.5em;
}

.history-img {  
    padding: 10px;
    max-height: 100px;
    width: auto;
}

iframe {
    width: 100%;
    padding: .5rem;
    border: none;
}

.adventure-section{
    padding: 10px;
    margin: auto;
    display: block;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    /* width: 100%; */
    text-align: center;
    /* margin: 0; */
}

.adventure-section img {
    margin-left: auto;
    margin-right: auto;
    max-width: 120px;
    padding: 10px;
}

.contact {
    text-align: center;
    padding: 20px 10px;
    margin: 10px 10px;
}

#contact-container {
    background-color: #D4B483;
    margin: 0.5em;
}

#employee-profiles {
    padding: 1rem;
    background-color: var(--accent2-color);
    margin: 0.5em;
}

.employees {
    display: flex;
    gap: 3rem;
    justify-content: center;
    flex-wrap: wrap;
}

.employee{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form {
    background-color:#D4B483;
    margin: .5rem;
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 5px;
}

.form h2 {
    text-align: center;
    padding: 20px;
}

.field {
    display: grid;
    grid-gap: .5rem;
    margin: 1rem;
    border: none;
    padding: 20px;
}

legend {
    font-size: 1.5rem;
    text-align: center;
}

label {
    text-align: center;
    font-size: 1.2rem;
}

input, textarea {
    padding: 0.5rem;
    font-size: 1.1rem;
    border-radius: 5px;
}

button, #call-to-action a {
    padding: 20px;
    border-radius: 20px;
    font-size: 1.7rem;
    font-weight: 500;
}

#sociallinks {
    margin-left: auto;
    padding: 10px;
}

#sociallinks img {
    max-width: 30px;
    height: auto;

}

#sociallinks a {
    text-decoration: none;
    padding: 5px;
}

footer {
    display: flex;
    background-color: var(--primary-color);
}

.footer-text {
    padding: 10px;
    align-items: center;
    justify-content: center;
    margin-left: auto;
}

.footer-text a {
    text-decoration: none;
    color: black;
}

